# wizard-of-map

./: gendataset.py  package-lock.json  package.json  pyproject.toml
public/: fonts.css
src/: App.css  App.tsx  screen.ts
src/game/: Game.css  Game.tsx
src/menu/: Menu.tsx
src/models/: City.ts  Index.ts  Round.ts
src/services/: DataService.ts
